adjust server.js

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,5 +16,9 @@
     "express": "^4.17.1",
     "request": "^2.88.0",
     "xmlhttprequest": "^1.8.0"
+  },
+  "engines": {
+    "node": ">=8.0.0",
+    "npm": ">=6.0.0"
   }
 }
