--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -54,4 +54,5 @@ form:
       dev-organization: ''
       dev-space: ''
       app-name: '{{services.repo.parameters.repo_name}}'
-      
+    schema:
+      $ref: deploy.json
