--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -11,7 +11,7 @@ stages:
   - name: Build
     type: builder
     build_type: npm
-    working_dir: ./webapp
+    working_dir: webapp
     artifact_dir: ''
 - name: Deploy Stage
   inputs:
