--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -11,6 +11,11 @@ stages:
   - name: Build
     type: builder
     artifact_dir: ''
+    build_type: npm
+    working_dir: webapp
+    script: |-
+      #!/bin/bash
+      npm install    
 - name: Deploy Stage
   inputs:
   - type: job
